--- a/style/style.css
+++ b/style/style.css
@@ -43,15 +43,15 @@ body{
     flex-wrap: wrap;
     display: flex;
     justify-content: center;
-    margin: 50px;
+    margin: 5% 0;
 }
 
 .bandsection__individualband {
-    width: 300px;
-    margin: 0px auto;
-    padding:1%   
+    width: 15%;
+    min-width: 250px;
+    margin: 0;
+    padding:2%;
 }
-
 
 
 .bandsection__individualband__nomebanda {
