Ateração de design

--- a/style/style.css
+++ b/style/style.css
@@ -1,13 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Krona+One&family=Montserrat:wght@400;600&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
 
 :root{
 --cor-de-fundo: #000000;
 --cor-primaria: #3D0000;
 --cor-secundaria: #950101;
 --cor-terciaria: #FF0000;
---cor-texto-primario: #EEEEEE;
+--cor-texto-primario: #fbe4d8; 
+--cor-texto-secundario: #ffffff;
+--cor-link-hover: #535353;
 
---fonte-menu: 'Oswald', 'sans-serif';
+--cor-de-fundo-nunito:#190019;
+
+--fonte-menu: 'nunito', 'sans-serif';
 
 }
 
@@ -17,14 +21,14 @@
 }
 
 body{
-  color: var(--cor-texto-primario);
-  background-color: var(--cor-de-fundo);
+  color: var(--cor-nunito);
+  background-color: var(--cor-de-fundo-nunito);
 }
 
 .cabecalho {
     display: flex;
     justify-content: center;
-    border-bottom: solid 1px var(--cor-secundaria);
+    border-bottom: solid 1px var(--cor-texto-primario);
     padding: 5px;
     margin: 0;
 }
@@ -32,7 +36,7 @@ body{
 .cabecalho__links {
     font-family: var(--fonte-menu);
     font-size: 1.5em;
-    font-weight: 700;
+    font-weight: 900;
     color: var(--cor-texto-primario);
     text-decoration: none;
     margin: 15px;
@@ -43,7 +47,7 @@ body{
     flex-wrap: wrap;
     display: flex;
     justify-content: center;
-    margin: 5% 0;
+    margin: 1% 0;
 }
 
 .bandsection__individualband {
@@ -56,20 +60,37 @@ body{
 
 .bandsection__individualband__nomebanda {
     font-family: var(--fonte-menu);
-    font-weight: 500;
-    font-size: 1.5em;
+    color: var(--cor-texto-primario);
+    font-weight: 600;
+    font-size: 1.3em;
+    text-align: center;
 }
 
 .bandsection__individualband__musicsband {
-    margin-top: 5px;
+    list-style-type: none;
+    color: var(--cor-texto-secundario);
+    margin-top: 7%;
 }
 
 
-.bandsection__individualband__faixas { /* vai ser trocado por link's*/
+
+
+.bandsection__individualband__faixas a {
     font-family: var(--fonte-menu);
     font-weight: 200;
     font-size: 1.3em;
+    text-decoration: none;
+    
 }
+.bandsection__individualband__faixas a:hover {
+    font-family: var(--fonte-menu);
+    font-weight: 200;
+    font-size: 1.3em;
+    color: var(--cor-link-hover);
+    text-decoration: none;
+}
+a { color: inherit; } 
+
 
 .bandsection__individualband__fotoartista {
     width: 100%;
